--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --check .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"typegen": "pocketbase-typegen --env --out ./src/lib/pocketbase-types.ts"
 	},
 	"devDependencies": {
 		"@fontsource/geist-sans": "^5.0.3",
@@ -20,8 +21,9 @@
 		"@tailwindcss/typography": "^0.5.14",
 		"autoprefixer": "^10.4.20",
 		"lucide-svelte": "^0.436.0",
-		"nthuais-sdk": "^0.0.1",
+		"nthuais-sdk": "^0.0.2",
 		"pocketbase": "^0.21.4",
+		"pocketbase-typegen": "^1.2.1",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"prettier-plugin-tailwindcss": "^0.6.5",
